syntax = "proto3";
option go_package = "github.com/treeverse/lakefs/pkg/kv/kvtest";

import "google/protobuf/timestamp.proto";

package io.treeverse.lakefs.kvtest;

message TestModel {
    bytes name = 1;
    string just_a_string = 2;
    double a_double = 3;
    google.protobuf.Timestamp test_time = 4;
    map<string, int32> test_map = 5;
    repeated bool test_list = 6;
}
